fix: z-index of different components

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,14 +7,6 @@ body {
   padding: 0;
 }
 
-body {
-  z-index: -10;
-}
-
-#root {
-  z-index: -10;
-}
-
 .DashCard {
   background: rgba(34, 209, 238, 0.2);
 }
